# fit-buddy-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  debug_settings.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.sh
alembic/: env.py
alembic/versions/: 41d246b6c30c_add_userprofile_model.py  8cb0e1e91d06_remove_sensor_id_from_machine.py  a586b6b7cae2_add_machine_id_to_sethistory.py  de49815799c1_add_knowledge_items_table_and_vector_.py  ff1938b24453_initial_db_models.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  auth.py  dictionary.py  health.py  hello_world.py  profile.py  program.py  session.py
app/core/: config.py  exceptions.py  llm.py  logging.py  security.py  supabase.py  user_db.py
app/middleware/: cors.py  error_handlers.py  logging.py  rate_limit.py
app/models/: base.py  domain.py
app/repositories/: base.py  dictionary.py  hello_world.py  profile.py  program.py  session.py
app/schemas/: common.py  dictionary.py  health.py  hello_world.py  profile.py  program.py  session.py  session_history.py  template.py
app/scripts/: ingest_knowledge.py  seed_exercises.py
app/services/: adaptation.py  base.py  dictionary.py  hello_world.py  iot.py  knowledge.py  profile.py  program.py  program_generator.py  rag.py  sensor.py  templates.py
app/utils/: example.py
assets/: Fit Buddy - Cahier des charges - Application coach IA - v2.txt
assets/Documentation pour développement/Exemples_markdowns_sport/adaptation-au-profil/: 01_ectomorphe.md  02_mesomorphe.md  03_emploi-du-temps-charge.md
assets/Documentation pour développement/Exemples_markdowns_sport/contruction-de-programme/: 01_full-body-debutant.md  02_full-body-intermediaire.md  03_split-haut-bas.md  04_push-pull-legs.md  05_bro-split.md  06_a-la-maison.md  07_sans-materiel.md  08_sur-mesure.md
assets/Documentation pour développement/Exemples_markdowns_sport/erreurs-et-corrections/: 01_execution.md  02_equilibre-musculaire.md  03_rythme-inadequat.md  04_surentrainement.md  05_incoherences-programme.md
tests/: conftest.py  test_health.py
(+20 files in other folders)
